# qr

./: .gitignore  meson.build
data/: com.github.hanscronau.qr.appdata.xml  com.github.hanscronau.qr.desktop
debian/: changelog  control  copyright
src/: Application.vala  MainWindow.vala  qrencode.vala
